--- a/MvcMovie/Views/Shared/_Layout.cshtml
+++ b/MvcMovie/Views/Shared/_Layout.cshtml
@@ -1,10 +1,21 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Movie App</title>
+    <link rel="stylesheet" href="~/assets/css/bootstrap.css">
+
+    <link rel="stylesheet" href="~/assets/css/maicons.css">
+
+    <link rel="stylesheet" href="~/assets/vendor/animate/animate.css">
+
+    <link rel="stylesheet" href="~/assets/vendor/owl-carousel/css/owl.carousel.css">
+
+    <link rel="stylesheet" href="~/assets/vendor/fancybox/css/jquery.fancybox.css">
+
+    <link rel="stylesheet" href="~/assets/css/theme.css">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -31,13 +42,27 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - 我的 ASP.NET 應用程式</p>
-        </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+
+    <script src="~/assets/js/jquery-3.5.1.min.js"></script>
+
+    <script src="~/assets/js/bootstrap.bundle.min.js"></script>
+
+    <script src="~/assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
+
+    <script src="~/assets/vendor/wow/wow.min.js"></script>
+
+    <script src="~/assets/vendor/fancybox/js/jquery.fancybox.min.js"></script>
+
+    <script src="~/assets/vendor/isotope/isotope.pkgd.min.js"></script>
+
+    <script src="~/assets/js/google-maps.js"></script>
+
+    <script src="~/assets/js/theme.js"></script>
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
